--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -50,6 +50,7 @@
 @import "reviewable-chat-message";
 @import "chat-thread-list-item";
 @import "chat-threads-list";
-@import "chat-thread-original-message";
 @import "chat-composer-separator";
 @import "chat-thread-header-button";
+@import "chat-thread-header";
+@import "chat-thread-unread-indicator";
