UX: add support for flagged chat message in reviewqueue (#21802)
* UX: add support for flagged chat message in reviewqueue

* correctly init a chat message object

---------

Co-authored-by: Joffrey JAFFEUX <j.jaffeux@gmail.com>

--- a/app/assets/stylesheets/common/base/reviewables.scss
+++ b/app/assets/stylesheets/common/base/reviewables.scss
@@ -232,8 +232,9 @@
       color: var(--secondary);
       border-radius: 8px;
       background-color: var(--secondary-high);
-      &.-flagged-post {
-        background-color: var(--danger-medium);
+      &.-flagged-post,
+      &.-flagged-chat-message {
+        background-color: var(--danger);
       }
       &.-queued-post,
       &.-queued-topic,
