FIX: Create original message user thread membership (#21808)
When a thread is created / a new message is created in the
thread, we want to make sure that the original message user
has a membership for that thread, otherwise they will not
receive unread indicators for messages in the thread.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-thread.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-thread.hbs
@@ -1,5 +1,9 @@
 <div
-  class={{concat-class "chat-thread" (if this.loading "loading")}}
+  class={{concat-class
+    "chat-thread"
+    (if this.loading "loading")
+    (if this.thread.staged "staged")
+  }}
   data-id={{this.thread.id}}
   {{did-insert this.setUploadDropZone}}
   {{did-insert this.subscribeToUpdates}}
