FEATURE: Chat thread header indicator improvements (#21807)
This changes the thread header positioning of the
unread indicator to match the designs based on the route:

1. When the channel is open, show the indicator of # unread
   threads with the icon
2. When the threads list is open, show no indicator since
   you are on the list and can see which threads are unread
3. When a single thread is open, show the unread threads
   indicator along with a left < back button, with a label
   to show that this goes back to ongoing discussions

Drawer changes to come in another PR.

--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
@@ -1,4 +1,18 @@
 <div class="chat-thread-header">
+  <div class="chat-thread-header__left-buttons">
+    {{#if @thread}}
+      <LinkTo
+        class="chat-thread__back-to-list btn-flat btn btn-icon no-text"
+        @route="chat.channel.threads"
+        @models={{@channel.routeModels}}
+        title={{i18n "chat.return_to_threads_list"}}
+      >
+        <Chat::Thread::HeaderUnreadIndicator @channel={{@channel}} />
+        {{d-icon "chevron-left"}}
+      </LinkTo>
+    {{/if}}
+  </div>
+
   <span class="chat-thread-header__label overflow-ellipsis">
     {{replace-emoji this.label}}
   </span>
