--- a/plugins/chat/assets/javascripts/discourse/components/chat-full-page-header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-full-page-header.hbs
@@ -40,7 +40,7 @@
             />
           {{/if}}
 
-          {{#if @channel.threadingEnabled}}
+          {{#if this.showThreadsListButton}}
             <Chat::Thread::ThreadsListButton @channel={{@channel}} />
           {{/if}}
         </div>
