--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/header-unread-indicator.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/header-unread-indicator.hbs
@@ -1,5 +1,9 @@
 {{#if this.showUnreadIndicator}}
-  <div class="chat-thread-header-unread-indicator">
+  <div
+    class="chat-thread-header-unread-indicator"
+    aria-label={{i18n "chat.unread_threads_count" count=this.unreadCountLabel}}
+    title={{i18n "chat.unread_threads_count" count=this.unreadCountLabel}}
+  >
     <div class="chat-thread-header-unread-indicator__number-wrap">
       <div
         class="chat-thread-header-unread-indicator__number"
