--- a/app/views/layouts/_noscript_footer.html.erb
+++ b/app/views/layouts/_noscript_footer.html.erb
@@ -16,16 +16,20 @@
           <a href='<%= path "/guidelines" %>' itemprop="url"><%= t 'guidelines_topic.title' %> </a>
         </span>
       </li>
-      <li itemscope itemtype='http://schema.org/SiteNavigationElement'>
-        <span itemprop='name'>
-          <a href='<%= path "/tos" %>' itemprop="url"><%= t 'tos_topic.title' %> </a>
-        </span>
-      </li>
-      <li itemscope itemtype='http://schema.org/SiteNavigationElement'>
-        <span itemprop='name'>
-          <a href='<%= path "/privacy" %>' itemprop="url"><%= t 'privacy_topic.title' %> </a>
-        </span>
-      </li>
+      <% if path = tos_path.presence %>
+        <li itemscope itemtype='http://schema.org/SiteNavigationElement'>
+          <span itemprop='name'>
+            <a href='<%= path %>' itemprop="url"><%= t 'tos_topic.title' %> </a>
+          </span>
+        </li>
+      <% end %>
+      <% if path = privacy_path.presence %>
+        <li itemscope itemtype='http://schema.org/SiteNavigationElement'>
+          <span itemprop='name'>
+            <a href='<%= path %>' itemprop="url"><%= t 'privacy_topic.title' %> </a>
+          </span>
+        </li>
+      <% end %>
     </ul>
   </nav>
   <p class='powered-by-link'><%= t 'powered_by_html' %></p>
