--- a/app/views/static/show.html.erb
+++ b/app/views/static/show.html.erb
@@ -10,11 +10,11 @@
         <li class='nav-item-faq'><a class='<%= @page == 'faq' ? 'active' : '' %>' href='<%=faq_path%>'><%= t 'js.faq' %></a></li>
       <% end %>
     <% end %>
-    <% if SiteSetting.tos_topic_id > 0 %>
-      <li class='nav-item-tos'><a href='<%= tos_path %>' class='<%= @page == 'tos' ? 'active' : '' %>'><%= t 'js.tos' %></a></li>
+    <% if path = tos_path.presence %>
+      <li class='nav-item-tos'><a href='<%= path %>' class='<%= @page == 'tos' ? 'active' : '' %>'><%= t 'js.tos' %></a></li>
     <% end %>
-    <% if SiteSetting.privacy_topic_id > 0 %>
-      <li class='nav-item-privacy'><a href='<%= privacy_path %>' class='<%= @page == 'privacy' ? 'active' : '' %>'><%= t 'js.privacy' %></a></li>
+    <% if path = privacy_path.presence %>
+      <li class='nav-item-privacy'><a href='<%= path %>' class='<%= @page == 'privacy' ? 'active' : '' %>'><%= t 'js.privacy' %></a></li>
     <% end %>
   </ul>
 
