UX: deletes a message when editing to blank (#21785)
Editing a message to an empty string and sending it, will delete it.

This commit also refactors a lot of channel/thread composer shortcuts specs.

---

This commit also includes various spec fixes which have been flakey while finishing this pull request.

--- a/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-message.hbs
@@ -13,7 +13,7 @@
     {{did-update this.decorateCookedMessage @message.version}}
     {{on "touchmove" this.handleTouchMove passive=true}}
     {{on "touchstart" this.handleTouchStart passive=true}}
-    {{on "touchend" this.handleTouchEnd passive=true}}
+    {{on "touchend" this.handleTouchEnd}}
     {{on "mouseenter" this.onMouseEnter passive=true}}
     {{on "mouseleave" this.onMouseLeave passive=true}}
     {{on "mousemove" this.onMouseMove passive=true}}
@@ -23,6 +23,7 @@
       (if @message.highlighted "highlighted")
       (if (eq @message.user.id this.currentUser.id) "is-by-current-user")
       (if @message.staged "is-staged" "is-persisted")
+      (if @message.deletedAt "is-deleted")
     }}
     data-id={{@message.id}}
     data-thread-id={{@message.thread.id}}
@@ -44,7 +45,7 @@
       {{/if}}
 
       {{#if this.deletedAndCollapsed}}
-        <div class="chat-message-deleted">
+        <div class="chat-message-text chat-message-deleted">
           <DButton
             @class="btn-flat chat-message-expand"
             @action={{this.expand}}
