--- a/plugins/chat/assets/javascripts/discourse/components/chat-thread.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-thread.hbs
@@ -6,10 +6,8 @@
   }}
   data-id={{this.thread.id}}
   {{did-insert this.setUploadDropZone}}
-  {{did-insert this.subscribeToUpdates}}
-  {{did-update this.subscribeToUpdates this.thread.id}}
-  {{did-insert this.loadMessages}}
-  {{did-update this.loadMessages this.thread}}
+  {{did-insert this.didUpdateThread}}
+  {{did-update this.didUpdateThread this.thread.id}}
   {{will-destroy this.unsubscribeFromUpdates}}
 >
   {{#if @includeHeader}}
