DEV: introduces Chat::Thread::ListItem in styleguide (#21851)

--- a/plugins/chat/assets/javascripts/discourse/components/styleguide/organisms/chat.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/styleguide/organisms/chat.hbs
@@ -1,4 +1,4 @@
 <Styleguide::ChatMessage />
 <Styleguide::ChatComposer />
-<Styleguide::ChatThreadOriginalMessage />
+<Styleguide::ChatThreadListItem />
 <Styleguide::ChatComposerMessageDetails />
