FEATURE: display PM participant group names in the topics list. (#21677)
After this change, we can view all participant group names on the topic list page.

Co-authored-by: Régis Hanol <regis@hanol.fr>

--- a/app/assets/stylesheets/common/base/_topic-list.scss
+++ b/app/assets/stylesheets/common/base/_topic-list.scss
@@ -263,6 +263,19 @@
     .discourse-tag.box {
       margin-right: 0.25em;
     }
+    .participant-groups {
+      margin-left: 0.5em;
+      font-weight: normal;
+      font-size: var(--font-down-1);
+
+      > a {
+        color: var(--primary-medium);
+        border: solid 1px var(--primary-low);
+        padding: 0 0.3em 0.07em;
+        border-radius: 0.6em;
+        margin-right: 0.25em;
+      }
+    }
   }
 
   .topic-featured-link {
