UX: followups to #1f37fe5 (#21859)
- ensures buttons are aligned to the bottom
- makes the emoji icon tertiary as initially intended
- correctly sets the icon scale of the sending button

--- a/plugins/chat/assets/stylesheets/common/chat-composer-button.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer-button.scss
@@ -14,6 +14,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    align-self: flex-end;
   }
 
   .d-icon {
@@ -62,15 +63,19 @@
     }
 
     &:hover {
-      .d-icon.is-send-enabled & {
-        transform: scale(1.2);
+      .d-icon {
+        .is-send-enabled & {
+          transform: scale(1.2);
+        }
       }
     }
   }
 
   &.-emoji {
-    .d-icon.is-focused & {
-      color: var(--tertiary);
+    .d-icon {
+      .is-focused & {
+        color: var(--tertiary);
+      }
     }
   }
 }
