UX: chat channel header icons (#21887)
* UX: BEM fix for has-unreads

* UX: small refactor for chat channel header icons

* UX: refactor chat thread unread indicator

* UX: channel header thread icon hover styling

* DEV: Spec fixes

* UX: fix font + line-height

---------

Co-authored-by: Martin Brennan <martin@discourse.org>

--- a/plugins/chat/assets/javascripts/discourse/components/chat-full-page-header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-full-page-header.hbs
@@ -35,7 +35,7 @@
             <DButton
               @icon="discourse-compress"
               @title="chat.close_full_page"
-              class="open-drawer-btn btn-flat no-text"
+              class="open-drawer-btn btn-flat"
               @action={{@onCloseFullScreen}}
             />
           {{/if}}
