DEV: Fix a sass warning (#21931)

--- a/app/assets/stylesheets/common/components/user-card.scss
+++ b/app/assets/stylesheets/common/components/user-card.scss
@@ -274,7 +274,7 @@
       color: var(--primary);
       .d-icon {
         margin: auto;
-        font-size: math.div(var(--avatar-width), 1.5);
+        font-size: calc(var(--avatar-width) / 1.5);
       }
       &.rounded {
         border-radius: 50%;
