UX: adjust frequent poster size in topic map (#21933)

--- a/app/assets/stylesheets/common/base/topic-post.scss
+++ b/app/assets/stylesheets/common/base/topic-post.scss
@@ -684,14 +684,14 @@ aside.quote {
     }
 
     .avatar {
-      width: 2.5em;
-      height: 2.5em;
+      width: 2.15em;
+      height: 2.15em;
     }
     .post-count {
       position: absolute;
       right: 0;
       border-radius: 100px;
-      padding: 3px 5px;
+      padding: 0.15em 0.4em 0.2em;
       text-align: center;
       font-weight: normal;
       font-size: var(--font-down-2);
