UX: fix greyed out add button in chat composer when focussed (#21947)

--- a/plugins/chat/assets/stylesheets/common/chat-composer-button.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-composer-button.scss
@@ -24,7 +24,7 @@
       color: var(--primary-low-mid);
     }
 
-    .is-send-disabled.is-focused & {
+    .is-focused & {
       color: var(--primary-high);
     }
 
