--- a/app/assets/stylesheets/common/base/sidebar-section-link.scss
+++ b/app/assets/stylesheets/common/base/sidebar-section-link.scss
@@ -12,22 +12,25 @@
     display: inline-flex;
     width: 100%;
     align-items: center;
-    color: var(--primary-high);
+    color: var(--d-sidebar-link-color);
     transition: background-color 0.25s;
 
     &:focus,
     &:hover {
-      background: var(--d-sidebar-highlight-color);
+      background: var(--d-sidebar-highlight-background);
       outline: none;
+      .prefix-text {
+        background: var(--d-sidebar-highlight-prefix-background);
+      }
     }
 
     &.active {
-      color: var(--primary-800);
-      background: var(--d-sidebar-highlight-color);
+      color: var(--d-sidebar-highlight-color);
+      background: var(--d-sidebar-highlight-background);
 
       .sidebar-section-link-prefix {
         &.icon {
-          color: var(--primary-medium);
+          color: var(--d-sidebar-highlight-color);
         }
       }
     }
@@ -37,7 +40,7 @@
       padding-left: 0.5em;
       padding-right: 0.1em; // avoids some overflow cropping
       text-align: right;
-      color: var(--primary-700);
+      color: var(--d-sidebar-link-badge-color);
       font-size: var(--font-down-2);
       font-weight: normal;
       margin-left: auto;
@@ -46,7 +49,6 @@
     .sidebar-section-link-suffix {
       margin-left: 1em;
       font-size: var(--font-down-4);
-      color: var(--tertiary-medium);
     }
 
     .sidebar-section-link-content-text {
@@ -111,23 +113,12 @@
 
     &.text {
       text-align: center;
-
-      .prefix-text {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        border-radius: 100%;
-        background: rgba(var(--primary-rgb), 0.1);
-        width: calc(var(--d-sidebar-section-link-prefix-width) - 2px);
-        height: calc(var(--d-sidebar-section-link-prefix-width) - 2px);
-        font-size: var(--font-down-2);
-      }
     }
 
     &.icon,
     &.span {
       position: relative;
-      color: var(--primary-500);
+      color: var(--d-sidebar-link-icon-color);
 
       svg {
         font-size: 0.8em;
@@ -138,7 +129,7 @@
         background-color: transparent;
         border-radius: 50%;
         padding: 2px 2px 3px;
-        color: var(--primary-high);
+        color: var(--d-sidebar-link-color);
         height: 0.5rem;
         width: 0.5rem;
         top: -0.2em;
@@ -152,12 +143,23 @@
     }
   }
 
+  .prefix-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100%;
+    background: var(--d-sidebar-prefix-background);
+    width: calc(var(--d-sidebar-section-link-prefix-width) - 2px);
+    height: calc(var(--d-sidebar-section-link-prefix-width) - 2px);
+    font-size: var(--font-down-2);
+  }
+
   .sidebar-section-link-hover {
     margin-left: auto;
 
     .sidebar-section-hover-button {
       display: none;
-      color: var(--primary-medium);
+      color: var(--d-sidebar-link-icon-color);
       border: none;
       background: transparent;
       padding: 0 0 0 0.5em;
@@ -167,7 +169,7 @@
       &:focus,
       .discourse-no-touch & {
         &:hover {
-          color: var(--primary);
+          color: var(--d-sidebar-highlight-color);
         }
       }
 
@@ -178,7 +180,7 @@
 
     &:hover {
       .sidebar-section-hover-button {
-        background: var(--primary-low);
+        background: var(--d-sidebar-highlight-background);
       }
     }
   }
