FIX: restore sidebar footer background (#21956)

--- a/app/assets/stylesheets/common/base/sidebar-footer.scss
+++ b/app/assets/stylesheets/common/base/sidebar-footer.scss
@@ -1,5 +1,6 @@
 .sidebar-footer-wrapper {
   box-sizing: border-box;
+  background: var(--d-sidebar-background);
   width: 100%;
   position: sticky;
   bottom: 0;
