DEV: Refactor `GroupNotificationsButton` into `userPrivateMessages.group` route (#21930)
Why this change?

Before this change, the `GroupNotificationsButton` is rendered in the
template of `userPrivateMessages` route based on a conditional that
checks if the `isGroup` property is true. However, the `isGroup`
property is determined based on the child route that is rendered.
However, this leads to "jankiness" in the UI because the
`GroupNotificationsButton` will be rendered once the route is entered
even if the model for the child route has not been resolved yet.

What is the solution?

In order to avoid this, we move the rendering of the
`GroupNotificationsButton` into the template of the
`userPrivateMessages.group` route and rely on the `in-element` helper to
render it into the right spot in the template of the
`userPrivateMessages` route.

--- a/app/assets/javascripts/discourse/app/templates/user-private-messages-group.hbs
+++ b/app/assets/javascripts/discourse/app/templates/user-private-messages-group.hbs
@@ -3,7 +3,7 @@
   <DNavigationItem
     @route="userPrivateMessages.group.index"
     @class="user-nav__messages-group-latest"
-    @model={{this.groupName}}
+    @model={{this.group.name}}
     @ariaCurrentContext="subNav"
   >
     {{d-icon "envelope"}}
@@ -13,7 +13,7 @@
   {{#if this.viewingSelf}}
     <DNavigationItem
       @route="userPrivateMessages.group.new"
-      @model={{this.groupName}}
+      @model={{this.group.name}}
       @class="user-nav__messages-group-new"
       @ariaCurrentContext="subNav"
     >
@@ -23,7 +23,7 @@
 
     <DNavigationItem
       @route="userPrivateMessages.group.unread"
-      @model={{this.groupName}}
+      @model={{this.group.name}}
       @class="user-nav__messages-group-unread"
       @ariaCurrentContext="subNav"
     >
@@ -34,7 +34,7 @@
     <DNavigationItem
       @route="userPrivateMessages.group.archive"
       @class="user-nav__messages-group-archive"
-      @model={{this.groupName}}
+      @model={{this.group.name}}
       @ariaCurrentContext="subNav"
     >
       {{d-icon "archive"}}
@@ -42,5 +42,12 @@
     </DNavigationItem>
   {{/if}}
 </UserNav::MessagesSecondaryNav>
+
+{{#in-element this.navigationControlsButton}}
+  <GroupNotificationsButton
+    @value={{this.group.group_user.notification_level}}
+    @onChange={{this.changeGroupNotificationLevel}}
+  />
+{{/in-element}}
 
 {{outlet}}
