FIX: Use a default hashtag icon color for user with no permission (#21825)
One user can create a post or chat message with a hashtag they
have permission to use, but then when other users look at that
post they will see an empty space next to the hashtag because they
do not have the permission to load the colors in CSS classes for
the related category.

This fixes the issue by adding a default color with a special
CSS class if the user doesn't have permission to see the linked
channel/category on the hashtag.

--- a/app/assets/stylesheets/common/components/hashtag.scss
+++ b/app/assets/stylesheets/common/components/hashtag.scss
@@ -25,6 +25,10 @@ a.hashtag {
   .d-icon {
     font-size: var(--font-down-1);
     margin: 0 0.2em 0 0.1em;
+
+    &.hashtag-missing {
+      color: var(--primary-medium);
+    }
   }
 
   img.emoji {
@@ -43,6 +47,10 @@ a.hashtag {
     height: 9px;
     margin-right: 5px;
     display: inline-block;
+
+    &.hashtag-missing {
+      background-color: var(--primary-medium);
+    }
   }
 }
 
