--- a/plugins/chat/assets/javascripts/discourse/components/chat-header-icon-unread-indicator.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-header-icon-unread-indicator.hbs
@@ -1,9 +1,7 @@
 {{#if this.showUrgentIndicator}}
   <div class="chat-channel-unread-indicator urgent">
-    <div class="number-wrap">
-      <div
-        class="number"
-      >{{this.chatTrackingStateManager.allChannelUrgentCount}}</div>
+    <div class="chat-channel-unread-indicator__number">
+      {{this.unreadCountLabel}}
     </div>
   </div>
 {{else if this.showUnreadIndicator}}
