--- a/app/assets/javascripts/discourse/app/templates/application.hbs
+++ b/app/assets/javascripts/discourse/app/templates/application.hbs
@@ -85,7 +85,7 @@
     @outletArgs={{hash showFooter=this.showFooter}}
   />
 
-  <ModalContainer />
+  {{outlet "modal"}}
   <DialogHolder />
   <TopicEntrance />
   <ComposerContainer />
