UX: First pass at edit categories navigation modal for sidebar (#21963)
What this change?

We are currently not fully satisfied with the current way to edit the
categories and tags that appears in the sidebar where the user is
redirected to the tracking preferences tab in the user's profile causing
the user to lose context of the current page. In addition, the dropdown
to select categories or tags limits the amount of information we can
display.

Since editing or adding a custom categories section is already using a
modal, we have decided to switch editing the categories and tags that
appear in the sidebar to use a modal as well.

This commit ships a first pass of the edit categories modal such that we
can keep the commit small and reviewable. The incomplete nature of the
feature is also reflected in the fact that the feature is hidden behind
a new `new_edit_sidebar_categories_tags_interface_groups` site setting.

--- a/app/assets/javascripts/discourse/app/components/sidebar/user/categories-section.hbs
+++ b/app/assets/javascripts/discourse/app/components/sidebar/user/categories-section.hbs
@@ -33,6 +33,20 @@
             data-category-id={{sectionLink.category.id}}
           />
         {{/each}}
+      {{else if this.currentUser.new_edit_sidebar_categories_tags_interface_groups_enabled}}
+        <Sidebar::SectionLink
+          @linkName="configure-categories"
+          @prefixType="icon"
+          @prefixValue="pencil-alt"
+          @model={{this.currentUser}}
+          @content={{i18n
+            "sidebar.sections.categories.links.add_categories.content"
+          }}
+          @title={{i18n
+            "sidebar.sections.categories.links.add_categories.title"
+          }}
+          {{on "click" this.editTracked}}
+        />
       {{else}}
         <Sidebar::SectionLink
           @linkName="configure-categories"
