--- a/app/assets/stylesheets/common/components/_index.scss
+++ b/app/assets/stylesheets/common/components/_index.scss
@@ -27,6 +27,7 @@
 @import "relative-time-picker";
 @import "share-and-invite-modal";
 @import "download-calendar";
+@import "sidebar-categories-form";
 @import "svg";
 @import "tap-tile";
 @import "time-input";
