--- a/app/assets/stylesheets/common/d-editor.scss
+++ b/app/assets/stylesheets/common/d-editor.scss
@@ -183,11 +183,12 @@
     width: 100%;
 
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    align-items: center;
     gap: 0 0.5em;
 
     position: absolute;
-    height: var(--resizer-height);
+    height: calc(var(--resizer-height) + 0.5em);
     bottom: 0;
     left: 0;
     opacity: 0;
@@ -234,15 +235,15 @@
     }
 
     .alt-text-readonly-container {
-      flex: 1 1;
-      width: 100%;
+      flex: 1 1 auto;
+      // arbitrary min-width value allows for correct shrinking
+      min-width: 100px;
 
       .alt-text {
         margin-right: 0.5em;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
-        max-width: 100%;
       }
 
       .alt-text-edit-btn {
@@ -256,9 +257,9 @@
     }
 
     .alt-text-edit-container {
-      margin-top: 0.25em;
       gap: 0 0.25em;
       flex: 1;
+      max-width: 100%;
 
       .alt-text-input,
       .alt-text-edit-ok,
@@ -267,11 +268,13 @@
       }
 
       .alt-text-input {
+        display: inline-flex;
         flex: 1;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
         margin: 0;
+        padding-left: 0.25em;
       }
 
       .alt-text-edit-ok,
@@ -292,6 +295,11 @@
       .d-icon-trash-alt {
         margin-left: 0.5em;
       }
+    }
+
+    .wrap-image-grid-button {
+      cursor: pointer;
+      color: var(--tertiary);
     }
 
     svg {
