REFACTOR: composer/thread (#21910)
This commit contains multiple changes to improve the composer behavior especially in the context of a thread:

- Generally rename anything of the form `chatChannelThread...` to `chatThread...``
- Moves the textarea interactor instance inside the composer server
- Improves the focus state and closing of panel related to the use of the Escape shortcut
- Creates `Chat::ThreadList` as a component instead of having `Chat::Thread::ListItem` and others which could imply they were children of a the `Chat::Thread` component

--- a/plugins/chat/assets/javascripts/discourse/components/chat-channel.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat-channel.hbs
@@ -2,7 +2,7 @@
   class={{concat-class
     "chat-channel"
     (if this.loading "loading")
-    (if this.chatChannelPane.sending "chat-channel--sending")
+    (if this.pane.sending "chat-channel--sending")
     (unless this.loadedOnce "chat-channel--not-loaded-once")
   }}
   {{did-insert this.setUploadDropZone}}
@@ -67,12 +67,12 @@
     @channel={{@channel}}
   />
 
-  {{#if this.chatChannelPane.selectingMessages}}
+  {{#if this.pane.selectingMessages}}
     <ChatSelectionManager
-      @selectedMessageIds={{this.chatChannelPane.selectedMessageIds}}
+      @selectedMessageIds={{this.pane.selectedMessageIds}}
       @chatChannel={{@channel}}
       @cancelSelecting={{action
-        this.chatChannelPane.cancelSelecting
+        this.pane.cancelSelecting
         @channel.selectedMessages
       }}
       @context="channel"
