--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread-list/item.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread-list/item.hbs
@@ -20,7 +20,7 @@
           {{replace-emoji this.title}}
         </div>
         <div class="chat-thread-list-item__unread-indicator">
-          <Chat::Thread::ListItemUnreadIndicator @thread={{@thread}} />
+          <Chat::ThreadList::Item::UnreadIndicator @thread={{@thread}} />
         </div>
       </div>
 
