--- a/plugins/chat/assets/javascripts/discourse/components/styleguide/chat-thread-list-item.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/styleguide/chat-thread-list-item.hbs
@@ -1,5 +1,5 @@
-<StyleguideExample @title="<Chat::Thread::ListItem>">
+<StyleguideExample @title="<Chat::ThreadList::Item>">
   <Styleguide::Component>
-    <Chat::Thread::ListItem @thread={{this.thread}} />
+    <Chat::ThreadList::Item @thread={{this.thread}} />
   </Styleguide::Component>
 </StyleguideExample>
