--- a/plugins/chat/assets/stylesheets/common/index.scss
+++ b/plugins/chat/assets/stylesheets/common/index.scss
@@ -53,4 +53,5 @@
 @import "chat-composer-separator";
 @import "chat-thread-header-buttons";
 @import "chat-thread-header";
+@import "chat-thread-list-header";
 @import "chat-thread-unread-indicator";
