--- a/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/chat/thread/header.hbs
@@ -4,10 +4,9 @@
       <LinkTo
         class="chat-thread__back-to-list btn-flat btn btn-icon no-text"
         @route="chat.channel.threads"
-        @models={{@channel.routeModels}}
         title={{i18n "chat.return_to_threads_list"}}
       >
-        <Chat::Thread::HeaderUnreadIndicator @channel={{@channel}} />
+        <Chat::Thread::HeaderUnreadIndicator @channel={{@thread.channel}} />
         {{d-icon "chevron-left"}}
       </LinkTo>
     {{/if}}
@@ -20,17 +19,16 @@
   <div class="chat-thread-header__buttons">
     {{#if this.canChangeThreadSettings}}
       <DButton
-        @action={{action this.openThreadSettings}}
+        @action={{this.openThreadSettings}}
         @class="btn-flat chat-thread-header__settings"
         @icon="cog"
         @title="chat.thread.settings"
       />
     {{/if}}
-
     <LinkTo
       class="chat-thread__close btn-flat btn btn-icon no-text"
       @route="chat.channel"
-      @models={{@channel.routeModels}}
+      @models={{@thread.channel.routeModels}}
       title={{i18n "chat.thread.close"}}
     >
       {{d-icon "times"}}
