--- a/plugins/chat/assets/stylesheets/common/chat-message-actions.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-message-actions.scss
@@ -76,6 +76,15 @@
     }
   }
 
+  &.has-no-secondary-actions {
+    .reply-btn {
+      border-right: 1px solid var(--primary-300);
+      border-top: 1px solid var(--primary-300);
+      border-bottom: 1px solid var(--primary-300);
+      border-radius: 0 0.25em 0.25em 0;
+    }
+  }
+
   .more-buttons.dropdown-select-box {
     .select-kit-header {
       background: none;
