--- a/app/assets/javascripts/discourse/app/components/form-template-field/textarea.hbs
+++ b/app/assets/javascripts/discourse/app/components/form-template-field/textarea.hbs
@@ -3,7 +3,12 @@
     <label class="form-template-field__label">{{@attributes.label}}</label>
   {{/if}}
   <Textarea
+    name={{@attributes.label}}
     class="form-template-field__textarea"
     placeholder={{@attributes.placeholder}}
+    pattern={{@validations.pattern}}
+    minLength={{@validations.min}}
+    maxLength={{@validations.max}}
+    required={{if @validations.required "required" ""}}
   />
 </div>
