--- a/app/assets/javascripts/discourse/app/components/form-template-field/checkbox.hbs
+++ b/app/assets/javascripts/discourse/app/components/form-template-field/checkbox.hbs
@@ -1,6 +1,11 @@
 <div class="control-group form-template-field" data-field-type="checkbox">
   <label class="form-template-field__label">
-    <Input class="form-template-field__checkbox" @type="checkbox" />
+    <Input
+      name={{@attributes.label}}
+      class="form-template-field__checkbox"
+      @type="checkbox"
+      required={{if @validations.required "required" ""}}
+    />
     {{@attributes.label}}
   </label>
 </div>
