--- a/app/assets/javascripts/discourse/app/components/form-template-field/input.hbs
+++ b/app/assets/javascripts/discourse/app/components/form-template-field/input.hbs
@@ -1,10 +1,17 @@
 <div class="control-group form-template-field" data-field-type="input">
+  {{! TODO(@keegan): Make label required }}
   {{#if @attributes.label}}
     <label class="form-template-field__label">{{@attributes.label}}</label>
   {{/if}}
+
   <Input
+    name={{@attributes.label}}
     class="form-template-field__input"
-    @type="text"
+    @type={{if @validations.type @validations.type "text"}}
     placeholder={{@attributes.placeholder}}
+    required={{if @validations.required "required" ""}}
+    pattern={{@validations.pattern}}
+    minLength={{@validations.min}}
+    maxLength={{@validations.max}}
   />
 </div>
