--- a/app/assets/javascripts/discourse/app/components/form-template-field/multi-select.hbs
+++ b/app/assets/javascripts/discourse/app/components/form-template-field/multi-select.hbs
@@ -2,14 +2,25 @@
   {{#if @attributes.label}}
     <label class="form-template-field__label">{{@attributes.label}}</label>
   {{/if}}
-  <MultiSelect
-    @class="form-template-field__multi-select"
-    @content={{@choices}}
-    @nameProperty={{null}}
-    @valueProperty={{null}}
-    @options={{hash
-      translatedNone=@attributes.none_label
-      maximum=@validations.maximum
-    }}
-  />
+
+  {{! TODO(@keegan): Update implementation to use <MultiSelect/> instead }}
+  {{! Current using <select multiple> as it integrates easily with FormData (will update in v2) }}
+  <select
+    name={{@attributes.label}}
+    class="form-template-field__multi-select"
+    required={{if @validations.required "required" ""}}
+    multiple="multiple"
+  >
+    {{#if @attributes.none_label}}
+      <option
+        class="form-template-field__multi-select-placeholder"
+        value=""
+        disabled
+        hidden
+      >{{@attributes.none_label}}</option>
+    {{/if}}
+    {{#each @choices as |choice|}}
+      <option value={{choice}}>{{choice}}</option>
+    {{/each}}
+  </select>
 </div>
