--- a/app/assets/stylesheets/common/components/_index.scss
+++ b/app/assets/stylesheets/common/components/_index.scss
@@ -14,6 +14,7 @@
 @import "date-time-input-range";
 @import "date-time-input";
 @import "footer-nav";
+@import "form-template-field";
 @import "group-member-dropdown";
 @import "groups-form-membership-fields";
 @import "hashtag";
