PERF: Improve workbox loading strategy (#22019)
Previously workbox JS was vendored into our git repository, and would be loaded from the `public/javascripts` directory with a 1 day cache lifetime. The main aim of this commit is to add 'cachebuster' to the workbox URL so that the cache lifetime can be increased.

- Remove vendored copies of workbox.
- Use ember-cli/broccoli to collect workbox files from node_modules into assets/workbox-{digest}
- Add assets to sprockets manifest so that they're collected from the ember-cli output directory (and uploaded to s3 when configured)

Some of the sprockets-related changes in this commit are not ideal, but we hope to remove sprockets in the not-too-distant future.

--- a/app/assets/javascripts/service-worker.js.erb
+++ b/app/assets/javascripts/service-worker.js.erb
@@ -1,9 +1,21 @@
 'use strict';
 
-importScripts("<%= "#{Discourse.asset_host}#{Discourse.base_path}/javascripts/workbox/workbox-sw.js" %>");
+<%
+  base = if GlobalSetting.use_s3? && GlobalSetting.s3_cdn_url
+    GlobalSetting.s3_asset_cdn_url.presence || GlobalSetting.s3_cdn_url
+  elsif GlobalSetting.cdn_url
+    GlobalSetting.cdn_url + Discourse.base_path
+  else
+    Discourse.base_path
+  end
+
+  workbox_base = "#{base}/assets/#{EmberCli.workbox_dir_name}"
+%>
+
+importScripts("<%= "#{workbox_base}/workbox-sw.js" %>");
 
 workbox.setConfig({
-  modulePathPrefix: "<%= "#{Discourse.asset_host}#{Discourse.base_path}/javascripts/workbox" %>",
+  modulePathPrefix: "<%= workbox_base %>",
   debug: false
 });
 
