--- a/plugins/chat/assets/stylesheets/mobile/index.scss
+++ b/plugins/chat/assets/stylesheets/mobile/index.scss
@@ -1,5 +1,6 @@
 @import "base-mobile";
 @import "chat-channel-info";
+@import "chat-channel";
 @import "chat-composer";
 @import "chat-index";
 @import "chat-message-actions";
