DEV: implements styleguide for chat header icon (#22033)
This commit also uses this opportunity to change component name from: `ChatHeaderIcon` to `Chat::Header::Icon`

--- a/plugins/chat/assets/javascripts/discourse/components/styleguide/organisms/chat.hbs
+++ b/plugins/chat/assets/javascripts/discourse/components/styleguide/organisms/chat.hbs
@@ -2,3 +2,4 @@
 <Styleguide::ChatComposer />
 <Styleguide::ChatThreadListItem />
 <Styleguide::ChatComposerMessageDetails />
+<Styleguide::ChatHeaderIcon />
